monitoring/vmagent.yaml
---
# Source: victoria-metrics-agent/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmagent
  namespace: default
  labels:
    helm.sh/chart: victoria-metrics-agent-0.9.11
    app.kubernetes.io/name: vmagent
    app.kubernetes.io/instance: vmagent
    app.kubernetes.io/version: "v1.94.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vmagent
      app.kubernetes.io/instance: vmagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vmagent
        app.kubernetes.io/instance: vmagent
      annotations:
        checksum/config: 7e943d320db9bd69a224f8bdabf46c542cca2386d30b5f4bdde9623fb2666a97
    spec:
      serviceAccountName: vmagent
      securityContext:
        {}
      containers:
        - name: victoria-metrics-agent
          securityContext:
            {}
          image: "victoriametrics/vmagent:v1.94.0"
          workingDir: /
          args:
            - -promscrape.config=/config/scrape.yml
            - -remoteWrite.tmpDataPath=/tmpData
            - -remoteWrite.url=http://vmsingle-vm.monitoring.svc:8429/vm/api/v1/write
            - -envflag.enable=true
            - -envflag.prefix=VM_
            - -loggerFormat=json
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8429
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
          volumeMounts:
            - name: tmpdata
              mountPath: /tmpData
            - name: config
              mountPath: /config
            
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: tmpdata
          emptyDir: {}
        - name: config
          configMap:
            name: vmagent-config
