monitoring/kubelet.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm-kubelet
  namespace: kube-system
  labels:
    app.kubernetes.io/name: vm-kubelet
    k8s-app: vm-kubelet
spec:
  ports:
    - name: https-metrics
      protocol: TCP
      port: 10250
      targetPort: 10250
    - name: http-metrics
      protocol: TCP
      port: 10255
      targetPort: 10255
    - name: cadvisor
      protocol: TCP
      port: 4194
      targetPort: 4194
  clusterIP: None
  type: ClusterIP
